--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<mat-toolbar color="primary">
-   <span>Bhushan Pawar's Indian Restuarant </span>
-  </mat-toolbar>
-  <app-menu></app-menu>
-
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
